[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"

rand = "0.8"


anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]

tokio-test = "0.4"
