[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["full"] }


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


serde = { version = "1.0", features = ["derive"] }
toml = "0.9.7"
bincode = "1.3.3"
dashmap = "6.1.0"
rand = "0.9.1"
socket2 = "0.6.1"
futures = "0.3.31"
hyper = { version = "1", features = ["full"] }
http = "1"
h2 = { version = "0.4.2", optional = true }
http-body-util = { version = "0.1", optional = true }
httparse = { version = "1.9", optional = true }
httpdate = { version = "1.0", optional = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }


anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]

tokio-test = "0.4"
